--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,10 @@
   
 }
 
-  /*================================================== #f4c995; زرد کمرنگ
-------------------[ To Do List ]--------------------#333333; خاکستری پر رنگ 
-#737373;; خاکستری کم رنگ    #f1a43c; زرد پر رنگ
+  /*==================================================
+------------------[ To Do List ]-------------------
 ================================================== */
+
 .to-do-list {
   margin: 5% auto;
   width: 500px;
