--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@
   .header { 
     background-color: #f1a33c;
     padding: 30px 40px;
+    border-radius: 15px 15px 0px 0px;
     
   }
   
@@ -87,6 +88,7 @@
 
   /* Style the list items */
   ul li {
+    height: 44px;
     cursor: pointer;
     position: relative;
     padding: 12px 8px 12px 40px;
